# stg

./: .gitignore  CMakeLists.txt  main.cpp  main.hpp  readme.md
